Update GitHub sources

--- a/CV/CV.csproj
+++ b/CV/CV.csproj
@@ -239,6 +239,7 @@
     <Content Include="Scripts\scrolloverflow.min.js" />
     <Content Include="Scripts\vue.js" />
     <Content Include="Scripts\vue.min.js" />
+    <Content Include="Scripts\project.js" />
     <Content Include="webfonts\fa-brands-400.svg" />
     <Content Include="webfonts\fa-regular-400.svg" />
     <Content Include="webfonts\fa-solid-900.svg" />
